15. All GET request added to Swagger + small changes
